--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
 
                 <div class="nav_search">
-
+                    <input type="text" placeholder=" Cerca o inizia una nuova chat">
                 </div>
 
                 <div class="chats">
