added sidebar chats

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <!-- Link CSS -->
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
 
     <!-- Root for Vuejs -->
@@ -27,7 +29,7 @@
 
                     <div class="user">
                         <img src="img/avatar_io.jpg" alt="user image">
-                        <span>Sofia</span> 
+                        <span class="name">Sofia</span>
                     </div>
 
                     <div class="buttons">
@@ -40,7 +42,7 @@
 
                 <div class="nav_notifications">
                     <i class="fa-solid fa-bell-slash"></i>
-                    <div class="text">
+                    <div>
                         <p>Ricevi notifiche di nuovi messaggi</p>
                         <a href="#!">Attiva notifiche desktop</a>
                     </div>
@@ -52,7 +54,96 @@
 
                 <div class="chats">
 
+                    <div class="chat">                    
+                        <img src="img/avatar_1.jpg" alt="avatar_1">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Michele</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+                    
+                    <div class="chat">                    
+                        <img src="img/avatar_2.jpg" alt="avatar_2">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Marzio</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+
+                    <div class="chat">                    
+                        <img src="img/avatar_3.jpg" alt="avatar_3.jpg">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Fabio</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+
+                    <div class="chat">                    
+                        <img src="img/avatar_4.jpg" alt="avatar_4.jpg">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Samuele</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+
+                    <div class="chat">                    
+                        <img src="img/avatar_5.jpg" alt="avatar_5">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Alessandro</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+
+                    <div class="chat">                    
+                        <img src="img/avatar_6.jpg" alt="avatar_6.jpg">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Claudia</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+
+                    <div class="chat">                    
+                        <img src="img/avatar_7.jpg" alt="avatar_7">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Federico</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+
+                    <div class="chat">                    
+                        <img src="img/avatar_8.jpg" alt="avatar_8">
+                        <div class="text">
+                            <div class="flex_row">
+                                <span class="name">Davide</span>
+                                <span class="time">12.00</span>
+                            </div>
+                            <p class="last_msg_sent">Ultimo messaggio inviato</p>
+                        </div>
+                    </div>
+
                 </div>
+                
 
             </div>
 
@@ -84,4 +175,5 @@
     <!-- Script -->
     <script src="script/script.js"></script>
 </body>
+
 </html>
