added chat_area with sections

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <div class="flex_row nav_functions">
 
-                    <div class="user">
+                    <div>
                         <img src="img/avatar_io.jpg" alt="user image">
                         <span class="name">Sofia</span>
                     </div>
@@ -142,14 +142,41 @@
                         </div>
                     </div>
 
-                </div>
-                
+                </div>                
 
             </div>
 
             <!-- Chat area with chat infos & text -->
             <div class="chat_area">
 
+                <div class="flex_row nav_chat">
+
+                    <div class="user">
+                        <img src="img/avatar_1.jpg" alt="avatar_1">
+                        <div>
+                            <p class="name">Michele</p>
+                            <p class="time">Ultimo accesso oggi alle 12.00</p>    
+                        </div>
+                    </div>
+
+                    <div class="buttons">
+                        <button><i class="fa-solid fa-magnifying-glass"></i></i></button>
+                        <button><i class="fa-solid fa-paperclip"></i></button>
+                        <button><i class="fa-solid fa-ellipsis-vertical"></i></button>
+                    </div>
+
+                </div>
+
+                <div class="chat_msg_body">
+
+                </div>
+
+
+                <div class="footer_chat">
+                    <button><i class="fa-regular fa-face-smile"></i></button>
+                    <input type="text" placeholder="Scrivi un messaggio">
+                    <button><i class="fa-solid fa-microphone"></i></button>
+                </div>
             </div>
 
         </div>
