added messages in chat

--- a/index.html
+++ b/index.html
@@ -169,6 +169,20 @@
 
                 <div class="chat_msg_body">
 
+                    <div class="msg_box msg_sent">
+                        <p class="msg_sent_text">
+                            Hai portato a spasso il cane?
+                        </p>
+                        <p class="msg_sent_time">15.30</p>
+                    </div>
+
+                    <div class="msg_box msg_received">
+                        <p class="msg_received_text">
+                            Hai portato a spasso il cane?
+                        </p>
+                        <p class="msg_received_time">15.30</p>
+                    </div>
+                    
                 </div>
 
 
