--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                     <input type="text" v-model="newMessage" @keyup.enter="sendMessage"
                         placeholder="Scrivi un messaggio">
                     <button><i class="fa-solid fa-microphone"></i></button>
+                    <button><i class="fa-regular fa-paper-plane"></i></button>
                 </div>
             </div>
 
